<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tV_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/New_login_ui"
        android:textColor="@color/black"
        android:textSize="@dimen/textSize_New"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        tools:ignore="SpUsage" />

    <!--    <fragment-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:name="com.example.fragmentui.FragmentRegister"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->




<!--    <LinearLayout-->
<!--        android:id="@+id/linearLayout2"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:gravity="center"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/linearLayout"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tV_Login"-->
<!--        app:layout_constraintVertical_bias="0.493"-->
<!--        tools:layout_editor_absoluteX="0dp" >-->

<!--        -->

<!--        <TabHost-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="match_parent"-->
<!--                android:orientation="vertical">-->

<!--                <TabWidget-->
<!--                    android:id="@android:id/tabs"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content" />-->

<!--                <FrameLayout-->
<!--                    android:id="@android:id/tabcontent"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent">-->

<!--                    <LinearLayout-->
<!--                        android:id="@+id/Login"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:orientation="vertical">-->
<!--                        -->
<!--                    </LinearLayout>-->


<!--                    <LinearLayout-->
<!--                        android:id="@+id/Create_new_account"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="match_parent"-->
<!--                        android:orientation="vertical">-->

<!--                    </LinearLayout>-->
<!--                </FrameLayout>-->
<!--            </LinearLayout>-->
<!--        </TabHost>-->
<!--    </LinearLayout>-->

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.784">

        <TextView
            android:id="@+id/tV_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:textColor="@color/gray"
            tools:ignore="SpUsage" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_email"
                android:contentDescription="@string/Email" />

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tV_Email"
                app:layout_constraintVertical_bias="0.222"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <TextView
            android:id="@+id/tV_Pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Pass"
            android:textColor="@color/gray"
            tools:ignore="SpUsage" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_pass"
                android:contentDescription="@string/Pass" />


            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPassword"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tV_Email"
                app:layout_constraintVertical_bias="0.222"
                tools:ignore="SpUsage" />
        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/gradient"
        android:backgroundTintMode="add"
        android:text="@string/Login"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />




    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginWith"
        app:layout_constraintBottom_toTopOf="@+id/btn_Google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_Google"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/ic_google"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/btn_Face"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/ic_face"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_Google"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/btn_Bird"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/ic_bird"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_Google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:contentDescription="@string/app_name"/>




</androidx.constraintlayout.widget.ConstraintLayout>